# kdiff3

./: .appveyor.yml  .gitignore  .travis.yml  README.md
kdiff3/: CMakeLists.txt  config-kdiff3.h.cmake  configure
kdiff3/buildTools/: create_package
kdiff3/cmake/: macros.cmake
kdiff3/diff_ext_for_kdiff3/: CMakeLists.txt  README  diff_ext.cpp
kdiff3/kdiff3fileitemactionplugin/: kdiff3fileitemaction.cpp
kdiff3/kdiff3plugin-QT4/: kdiff3plugin.cpp
kdiff3/po/: CMakeLists.txt
kdiff3/src-QT4/: CMakeLists.txt  fileaccess.cpp  kdiff3_part.cpp  main.cpp  mergeresultwindow.cpp  mergeresultwindow.h  optiondialog.cpp  optiondialog.h  pdiff.cpp  smalldialogs.cpp
kdiff3/src-QT4/kreplacements/: kreplacements.cpp  kreplacements.h
kdiff3/windows_installer/: CMakeLists.txt  README_WIN.txt
