if (NOT BUILD_WITH_KDE4)
    if (BUILD_WITH_QT5)
        set(suffix "qt5")
    else()
        set(suffix "qt4")
    endif()
    find_program(LCONVERT_EXECUTABLE NAMES lconvert-${suffix} lconvert DOC "lconvert path")

    file(GLOB_RECURSE po_files "${CMAKE_CURRENT_SOURCE_DIR}" "kdiff3.po")

    foreach(po_file ${po_files})
        string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/" "" _locale ${po_file})
        string(REPLACE "/kdiff3.po" "" _locale ${_locale})

        set(filename "kdiff3_${_locale}")
        set(qm_file "${TRANSLATION_OUTPUT_DIR}/${filename}.qm")
        list(APPEND qm_files ${qm_file})

        add_custom_command(
            OUTPUT ${qm_file}
            COMMAND ${LCONVERT_EXECUTABLE} ARGS -if po -of qm -o ${qm_file} ${po_file}
            DEPENDS ${po_file}
            COMMENT "Generating ${filename}.qm"
            )

        string(REPLACE "@" "_" target ${filename})
        add_custom_target(${target} ALL DEPENDS ${qm_file})
    endforeach()

    install(FILES ${qm_files} DESTINATION ${LOCALE_INSTALL_DIR})
    return()
endif()

find_package(Gettext REQUIRED)
if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)
if (NOT GETTEXT_MSGFMT_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)

add_subdirectory(ar)
add_subdirectory(bg)
add_subdirectory(br)
add_subdirectory(bs)
add_subdirectory(ca)
add_subdirectory(ca@valencia)
add_subdirectory(cs)
add_subdirectory(cy)
add_subdirectory(da)
add_subdirectory(de)
add_subdirectory(el)
add_subdirectory(en_GB)
add_subdirectory(eo)
add_subdirectory(es)
add_subdirectory(et)
add_subdirectory(fr)
add_subdirectory(ga)
add_subdirectory(gl)
add_subdirectory(hi)
add_subdirectory(hne)
add_subdirectory(hr)
add_subdirectory(hu)
add_subdirectory(is)
add_subdirectory(it)
add_subdirectory(ja)
add_subdirectory(ka)
add_subdirectory(lt)
add_subdirectory(mai)
add_subdirectory(ml)
add_subdirectory(nb)
add_subdirectory(nds)
add_subdirectory(nl)
add_subdirectory(nn)
add_subdirectory(pl)
add_subdirectory(pt)
add_subdirectory(pt_BR)
add_subdirectory(ro)
add_subdirectory(ru)
add_subdirectory(rw)
add_subdirectory(sk)
add_subdirectory(sv)
add_subdirectory(ta)
add_subdirectory(tg)
add_subdirectory(tr)
add_subdirectory(ug)
add_subdirectory(uk)
add_subdirectory(zh_CN)
add_subdirectory(zh_TW)
