set(CPACK_GENERATOR NSIS)
set(CPACK_PACKAGE_NAME "KDiff3")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "KDiff3 - Tool for Comparison and Merge of Files and Directories")
set(CPACK_PACKAGE_VERSION "${VERSION_STR}")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "KDiff3")
set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING.txt")

set(CPACK_NSIS_MODIFY_PATH ON)
set(CPACK_NSIS_CREATE_ICONS_EXTRA
    "CreateShortCut '$SMPROGRAMS\\\\$STARTMENU_FOLDER\\\\KDiff3.lnk' '$INSTDIR\\\\kdiff3.exe'")
set(CPACK_NSIS_DELETE_ICONS_EXTRA
    "Delete '$SMPROGRAMS\\\\$START_MENU\\\\KDiff3.lnk'")

include(CPack)

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/bin DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/qt.conf DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

install(DIRECTORY bin ${INSTALL_TARGETS_DEFAULT_ARGS})
install(FILES COPYING.txt
    DIFF-EXT-LICENSE.txt
    diff3_cmd.bat
    README_WIN.txt
    qt.conf
    ${INSTALL_TARGETS_DEFAULT_ARGS}
    )
install(FILES ../ChangeLog ${INSTALL_TARGETS_DEFAULT_ARGS} RENAME ChangeLog.txt)
